# obsidian-iris-mcp

./: .dockerignore  .gitignore  LICENSE  README.md  iris_config.py  obsidian_memory_mcp.py  pyproject.toml  vault_cron.py
_iris/: __init__.py  core.py  embeddings.py  llm.py
_iris/tools/: __init__.py  analysis.py  anime.py  calendar.py  charts.py  discord.py  files.py  habits.py  health.py  import_export.py  links.py  notes.py  people.py  routines.py  search.py  semantic.py  sqlite.py  tasks.py  training.py  vocab.py  voice.py  warranties.py  web.py
docker/: .env.example  Dockerfile  README.md  bot.py  bot_embeds.py  docker-compose.yml  iris_mcp.example.json  requirements.txt  voice_listen.py
docker/ollama/: .env.example  README.md  compose.yaml
plugins/sqlite-db-reload/: main.js  manifest.json
